Fixed align of paragraphs for notebooks

--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -21,6 +21,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  @media #{$notebook} {
+    flex-direction: column;
+    align-items: center;
+  }
   @media #{$desktop} {
     flex-direction: column;
   }
